linear gradient color to header background and form styling added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </nav>
     </header>
 
-    <video width="700" height="300" controls autoplay>
+    <video width="700" height="300" controls autoplay loop>
       <source src="./assets/202749-918944227_tiny.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
@@ -37,7 +37,7 @@
       />
       <input id="submit" type="submit" value="Get Started" class="btn" />
     </form>
-
+    <!--   Leagues Grid section -->
     <div id="league">
       <div class="item">
         <h2>COED</h2>
@@ -74,5 +74,7 @@
         </div>
       </div>
     </div>
+
+    <!--   Pickup games Grid section -->
   </body>
 </html>
