header background color change, pickup section, button stylying, text description margin bottom added

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <img id="header-img" src="./assets/logo.png" alt="" />
       <nav id="nav-bar">
         <ul>
-          <li><a class="nav-link" href="#">League</a></li>
-          <li><a class="nav-link" href="#">Pickup games</a></li>
+          <li><a class="nav-link" href="#league">League</a></li>
+          <li><a class="nav-link" href="#pickup">Pickup games</a></li>
           <li><a class="nav-link" href="#">Prices</a></li>
         </ul>
       </nav>
@@ -76,5 +76,41 @@
     </div>
 
     <!--   Pickup games Grid section -->
+    <div id="pickup">
+      <div class="item">
+        <h2>Early Bird</h2>
+        <p class="description">
+          Start your day the right way. Quick pickup games for early risers who
+          want good runs, solid touches, and a boost before work. No
+          pressure—just soccer and fresh air.
+        </p>
+        <div class="image">
+          <img src="./assets/early.png" alt="morning game" />
+        </div>
+      </div>
+
+      <div class="item">
+        <h2>Lunch</h2>
+        <p class="description">
+          Got a break? Get a game in. Fast, fun pickup matches that fit
+          perfectly into your lunch hour. Break a sweat, score a goal, head back
+          refreshed.
+        </p>
+        <div class="image">
+          <img src="./assets/lunch.jpeg" alt="Lunchtime game" />
+        </div>
+      </div>
+      <div class="item">
+        <h2>Evening</h2>
+        <p class="description">
+          Unwind after the day with relaxed, competitive pickup games. Great
+          vibes, mixed skill levels, and plenty of action under the lights. Show
+          up, play, repeat.
+        </p>
+        <div class="image">
+          <img src="./assets/evening.jpg" alt="evening game" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
