visual look enhancements, and finished pirces container

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a class="nav-link" href="#league">League</a></li>
           <li><a class="nav-link" href="#pickup">Pickup games</a></li>
-          <li><a class="nav-link" href="#">Prices</a></li>
+          <li><a class="nav-link" href="#prices">Prices</a></li>
         </ul>
       </nav>
     </header>
@@ -111,6 +111,44 @@
           <img src="./assets/evening.jpg" alt="evening game" />
         </div>
       </div>
+    </div>
+
+    <div id="prices">
+      <article class="price-card">
+        <h3>11v11 Coed League</h3>
+        <p class="price">$250 <span>/ team</span></p>
+        <ul>
+          <li>12+ players per team</li>
+          <li>Full-field matches</li>
+        </ul>
+      </article>
+
+      <article class="price-card">
+        <h3>5v5 Men’s League</h3>
+        <p class="price">$110 <span>/ team</span></p>
+        <ul>
+          <li>6+ players per team</li>
+          <li>Fast-paced games</li>
+        </ul>
+      </article>
+
+      <article class="price-card">
+        <h3>5v5 Women’s League</h3>
+        <p class="price">$110 <span>/ team</span></p>
+        <ul>
+          <li>6+ players per team</li>
+          <li>Fast-paced games</li>
+        </ul>
+      </article>
+
+      <article class="price-card">
+        <h3>Pickup Games</h3>
+        <p class="price">$15 <span>/ player</span></p>
+        <ul>
+          <li>Random teams assigned</li>
+          <li>4 × 20-minute games</li>
+        </ul>
+      </article>
     </div>
   </body>
 </html>
