added footer section and improve header bckgnd color

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <title>Fire Pitch</title>
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/9d44a78030.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -150,5 +154,29 @@
         </ul>
       </article>
     </div>
+    <footer>
+      <div class="footer-col left">
+        <address>
+          <h4>Our Location</h4>
+          <p>4930 Taleman Av</p>
+          <p>Chicago, IL</p>
+          <p>60638</p>
+        </address>
+        <p>773 854-970</p>
+        <p><a href="email@test.com">firepitch@gmail.com</a></p>
+        <p><i>Mon-Sunday 8am-9pm</i></p>
+      </div>
+
+      <div class="footer-col center">
+        <p><a href="#">Home</a></p>
+        <p><a href="#league">League</a></p>
+        <p><a href="#pickup">Pickup Games</a></p>
+        <p><a href="#">Privacy</a></p>
+      </div>
+
+      <div class="footer-col right">
+        <i class="fa-brands fa-instagram" style="font-size: 48px"></i>
+      </div>
+    </footer>
   </body>
 </html>
