footer content finished

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <p>Chicago, IL</p>
           <p>60638</p>
         </address>
-        <p>773 854-970</p>
+        <p>(773) 854-970</p>
         <p><a href="email@test.com">firepitch@gmail.com</a></p>
         <p><i>Mon-Sunday 8am-9pm</i></p>
       </div>
@@ -175,7 +175,17 @@
       </div>
 
       <div class="footer-col right">
-        <i class="fa-brands fa-instagram" style="font-size: 48px"></i>
+        <a href="#"
+          ><i class="fa-brands fa-instagram" style="font-size: 42px"></i
+        ></a>
+
+        <a href="#"
+          ><i class="fa-brands fa-tiktok" style="font-size: 42px"></i
+        ></a>
+
+        <a href="#">
+          <i class="fa-brands fa-discord" style="font-size: 42px"></i
+        ></a>
       </div>
     </footer>
   </body>
